Basic codemirror setup

--- a/site/index.html
+++ b/site/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,6 +7,12 @@
     <title>WeBrick</title>
   </head>
   <body>
+    <h1> WeBrick </h1>
+    <h2> Write Some Brick Code </h2>
+    <div id="editor"></div>
+    <button id="build">Compile and Run!</button>
+    <h2> Output </h2>
+    <code id="output"></code>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
