--- a/site/index.html
+++ b/site/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1> WeBrick </h1>
-    <p> It's <a href="https://github.com/ryanisaacg/brick">Brick</a> on the web. </p>
+    <p> It's <a href="https://github.com/ryanisaacg/brick">Brick</a> on the web. Web Brick. WeBrick. </p>
     <h2> Write Some Brick Code </h2>
     <div id="editor"></div>
     <button id="build">Compile and Run!</button>
