--- a/site/index.html
+++ b/site/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link href="/style.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WeBrick</title>
   </head>
@@ -13,7 +13,7 @@
     <div id="editor"></div>
     <button id="build">Compile and Run!</button>
     <h2> Output </h2>
-    <code id="output"></code>
+    <code id="output"> </code>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
